2018-08-23  Tobias Brox  <tobias@redpill-linpro.com>
        * README.md: we don't need this file anymore, since we have README.rst
        * README.rst: merged latest changes from README.md
        * thrash-protect.py: more information in an error message.  Bumping 0.12.1.

2018-03-21  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: bugfix in logging, when parent pids are suspended they should also be logged
        * thrash-protect.py: Trying yet another time to fix the thrash-detecting algorithm; apparently the December bugfix was not well enough tested or thought through.
        * ChangeLog: updated, preparing for new release 0.12.

2018-02-08  Tobias Brox  <tobias@redpill-linpro.com>
        * thrash-protect.py: Silly-stupid bugfix for the THRASH_PROTECT_WHITELIST configuration environmental variable
        * README: doc tweaks

2017-12-08  Tobias Brox  <tobias@redpill-linpro.com>
	* thrash-protect.py: a bug in the thrash-detecting algorithm; the threshold for detecting thrashing has efficiently been 1 all the time, even though it's defaulted to 512 in the config section.  Fixed the bug and lowered the default to 4, not to change the behaviour too drastically.  This will cause thrash-protect to be less aggressive.
	* ChangeLog: updated, preparing for new release 0.11.6 ... 0.11.7 even
	* Makefile: latest changes did not work well for the archlinux install

2017-10-30  Tobias Brox  <tobias@redpill-linpro.com>
	* README: documentation tweaks and new thoughts
	* thrash-protect.py: sudo is added to the list of processes where it may be important to suspend the parent process

2017-10-11  Tobias Brox  <tobias@redpill-linpro.com>
	* Makefile: attempting to get directories right for other distros - credits to @anophelesgreyhoe@github

2017-02-23  Chris Coetzee  <chriscz93@gmail.com>
	* setup.py: pypi-compatible setup script
	* thrash-protect.py: moving logics to a main sub - minor refactoring to follow best pypi-practice
